--- a/styles/initial-variables.scss
+++ b/styles/initial-variables.scss
@@ -29,6 +29,8 @@ $green: hsl(111, 34%, 55%);
 
 // $family-sans-serif: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 $family-monospace: "Fira Code", monospace;
+$family-playfair-display: "Fira Code", monospace;
+$family-jost: "Fira Code", monospace;
 // $render-mode: optimizeLegibility;
 
 // $size-1: 3rem;
