--- a/styles/initial-variables.scss
+++ b/styles/initial-variables.scss
@@ -28,9 +28,9 @@ $green: hsl(111, 34%, 55%);
 // // Typography
 
 // $family-sans-serif: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-$family-monospace: "Fira Code", monospace;
-$family-playfair-display: "Fira Code", monospace;
-$family-jost: "Fira Code", monospace;
+$family-monospace: 'Fira Code', monospace;
+$family-playfair-display: 'Playfair Display', serif;
+$family-jost: 'Jost', sans-serif;
 // $render-mode: optimizeLegibility;
 
 // $size-1: 3rem;
