style: Remove playfair-display font-family

--- a/styles/derived-variables.scss
+++ b/styles/derived-variables.scss
@@ -91,7 +91,7 @@ $link-hover: $primary;
 
 // // Typography
 
-$family-primary: $family-playfair-display;
+$family-primary: $family-jost;
 $family-secondary: $family-jost;
 // $family-code: $family-monospace;
 
