style: Remove the border-top from buttons

--- a/styles/derived-variables.scss
+++ b/styles/derived-variables.scss
@@ -4,6 +4,9 @@ $primary: #98DF5B;
 // $primary: #ff149366;
 $primary-light: #aae6b9;
 $primary-dark-transparent: rgba(5, 116, 83, 0.7);
+$info: #8FBDD7;
+$warning:#FEDB7C;
+$danger: #A41D0E;
 
 // $info: $cyan;
 $success: $green;
