--- a/styles/derived-variables.scss
+++ b/styles/derived-variables.scss
@@ -1,12 +1,12 @@
 @import "initial-variables";
 
 $primary: #98DF5B;
-// $primary: #ff149366;
 $primary-light: #aae6b9;
 $primary-dark-transparent: rgba(5, 116, 83, 0.7);
 $info: #8FBDD7;
 $warning:#FEDB7C;
 $danger: #A41D0E;
+$light: #f8f4f6;
 
 $orange: #FF5033;
 $orange-invert: findColorInvert($orange);
